Fixed issue with scrollbar showing all the time.

--- a/src/main/webapp/styles/pages/phylocanvas-metadata.scss
+++ b/src/main/webapp/styles/pages/phylocanvas-metadata.scss
@@ -35,6 +35,6 @@ h2 {
 .metadata-aside__switches {
   height: 100%;
   padding-left: 1rem;
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
 }
